# APIMENSAGER

./: .env.example  .gitignore  README.md  app.js  index.html  package.json  render.yaml  server.js  styles.css
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260401_0001_saas_base.py  20260401_0002_billing.py  20260401_0003_crm.py  20260401_0004_meta_integration.py  20260401_0005_runtime_ops.py  20260401_0006_async_billing_events.py  20260401_0007_queue_retry_dead_letter.py  20260401_0008_automations.py  20260401_0009_automation_retry_dead_letter.py
apps/api/app/: main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: auth.py  automations.py  billing.py  channels.py  companies.py  crm.py  iam.py  meta.py  ops.py  runtime.py  stores.py
apps/api/app/core/: config.py  database.py  logging.py  security.py
apps/api/app/db/: bootstrap.py
apps/api/app/models/: __init__.py  audit.py  automation.py  base.py  billing.py  crm.py  enums.py  meta.py  platform.py  runtime.py  tenant.py
apps/api/app/schemas/: auth.py  automation.py  billing.py  common.py  company.py  crm.py  meta.py  ops.py  rbac.py  store.py  user.py
apps/api/app/services/: access.py  asaas.py  audit.py  automation.py  automation_runtime.py  billing.py  crm.py  meta_whatsapp.py  ops.py
apps/api/app/workers/: celery_app.py  tasks.py
data/: store.json
database/: schema.sql  seed.sql
docs/: ARCHITECTURE.md  DEPLOY_FREE.md
(+79 files in other folders)
